Fix a few Truchet issues in dark mode

--- a/src/_scss/text_styles.css
+++ b/src/_scss/text_styles.css
@@ -63,3 +63,7 @@ blockquote {
   margin-left:  0;
   margin-right: 0;
 }
+
+svg text {
+  fill: currentColor;
+}
